apps/bookinfo/manifests/reviews/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reviews
  namespace: bookinfo
spec:
  hosts:
  - reviews
  http:
  - match:
    - uri:
        prefix: /v1/
    rewrite:
      uri: "/"
    route:
    - destination:
        host: reviews
        subset: v1
  - match:
    - headers:
        x-version:
          exact: v2
    route:
    - destination:
        host: reviews
        subset: v2
  - match:
    - uri:
        prefix: /v3/
    rewrite:
      uri: "/"
    route:
    - destination:
        host: reviews
        subset: v3
  - route:
    - destination:
        host: reviews
        subset: v1
      weight: 5
    - destination:
        host: reviews
        subset: v2
      weight: 15
    - destination:
        host: reviews
        subset: v3
      weight: 80
